Refactored, all working
